# controllers/contoller.js
@@ -3,7 +3,7 @@ const bcrypt=require("bcrypt");
 const User=require("../models/model");
 const crypto=require("crypto");
 const sgMail=require("@sendgrid/mail");
-const nodemailer=require("nodemailer");
+// const nodemailer=require("nodemailer");
 const tokenList={};
 const {validationResult}=require("express-validator");
 const jwt=require("jsonwebtoken");
@@ -18,86 +18,62 @@ exports.postSignUp = (req, res, next) => {
   const {firstName,lastName,email,password,confirmPassword}=req.body;
 
   const errors=validationResult(req);
-  if (!errors.isEmpty()){
-    res.json({message: "You will put right information, please try again"});
+  console.log(errors);
+  if (errors.isEmpty()){
+    const salt=bcrypt.genSaltSync(10);
+    User.findOne({email})
+      .then(() => {
+        return bcrypt.hash(password, salt);
+      })
+      .then((hashpassword) => {
+        const user = new User({
+          firstName,
+          lastName,
+          email,
+          password: hashpassword,
+        });
+        return user.save();
+      })
+      .catch((err) => {
+        console.log(err);
+      });  
   }
-  const salt=bcrypt.genSaltSync(10);
-  User.findOne({email})
-    .then((userDoc) => {
-      if (userDoc) {
-        res.json({ message: "this email already exist" });
-      }
-      return bcrypt.hash(password, salt);
-    })
-    .then((hashpassword) => {
-      const user = new User({
-        firstName,
-        lastName,
-        email,
-        password: hashpassword,
-      });
-      return user.save();
-    })
-    .catch((err) => {
-      console.log(err);
-    });
-  res.json({ message: "Successfully sing up" });
+  res.json({"message" : "succesfully sign up"});
+  next();
 };
 
 //post sign in middleware config
 exports.postSignIn = (req, res, next) => {
-  const { email, password } = req.body;
-
+  const {email,password}=req.body;
   if (!email || !password) {
-    return res.statut(402).end();
+    return res.statut(402).json({"message": "Password or email must not be empty"});
   }
-
-  const user = {
+  const user={
     email: email,
     password: password,
   };
-
-  const token = jwt.sign({ user }, jwtKey, { expiresIn: jwtExpSec });
-  const refreshToken = jwt.sign({ user }, jwtRefreshKey, {
-    expiresIn: jwtRefreshExpSec,
-  });
-  const response = {
+  const token=jwt.sign({user},jwtKey,{expiresIn: jwtExpSec});
+  const refreshToken=jwt.sign({user},jwtRefreshKey, {expiresIn: jwtRefreshExpSec});
+  const response={
     statut: "Logged In",
     token: token,
     refreshToken: refreshToken,
   };
-  tokenList[refreshToken] = response;
-  res.status(200).json({ response });
-
-  // User.findOne({email})
-  //   .then((userInfo) => {
-  //     if (!userInfo) {
-  //       res.json({ message: "user does'nt existe" });
-  //     }
-  //     bcrypt
-  //       .compare(userInfo.password, password)
-  //       .then((data) => {
-  //         res.json({
-  //           firstName: userInfo.firstName,
-  //           lastName: userInfo.lastName,
-  //           email: userInfo.email,
-  //         });
-  //       })
-  //       .catch((err) => console.log(err));
-  //   })
-  //   .catch((err) => console.log(err));
+  tokenList[refreshToken]=response;
+  res.status(200).json({response});
+  next();
 };
 
 exports.postToken = (req, res) => {
-  const postData = req.body;
+  const postData=req.body;
 
   if (postData.refreshToken && postData.resetToken in tokenList) {
-    const user = {
+    const user={
       email: postData.email,
       password: postData.password,
     };
-    const token = jwt.sign({ user }, jwtKey, { expiresIn: jwtExpSec });
-    const response = {
+    const token=jwt.sign({user},jwtKey,{expiresIn: jwtExpSec});
+    const response={
       token: token,
     };
     tokenList[postData.refreshToken] = response;
@@ -116,67 +92,51 @@ exports.verifyToken = (req, res, next) => {
   res.json({ message: "Not log in" });
 };
 
-exports.getSignIn = (req, res, next) => {
-  try {
-    jwt.verify(req.token, jwtKey, (error, authData) => {
-      if (error) {
-        res.json({ message: "not log" });
-      }
-      res.json({ message: "post created", authData });
-    });
-  } catch (error) {}
-};
-
-//reset mdp
-// const set_Mail_Apy_key = sgMail.setApiKey(process.env.SENDGRID_API_KEY);
-// const transporter = nodemailer.createTransport("SMTP",
-//   {
-//     service: "gmail",
-//     auth: {
-//       user: "kentinhogbonouto1@gmail.com",
-//       api_key: set_Mail_Apy_key,
-//     },
-//   });
-
 //post reset
+sgMail.setApiKey(process.env.SENDGRID_API_KEY);
 exports.postReset = (req, res, next) => {
-  crypto.randomBytes(32, (err, buffer) => {
-    const email = req.body.email;
-    if (err) {
+  const {email}=req.body;
+  console.log(email);
+  crypto.randomBytes(32, (err, buffer) =>{
+    if(err){
       console.log(err);
-      return res.json({
-        message: "something went wrong ! check your script and try again",
-      });
     }
-    const token = buffer.toString("hex");
-    User.findOne({ email })
-      .then((user) => {
-        if (!user) {
-          req.json({ message: "No account with that email found." });
-        }
-        user.resetToken = token;
-        user.resetTokenExpiration = Date.now() + 3600000;
-        return user.save();
-      })
-      .then((result) => {
-        const mailSetting = {
-          from: "kentinhogbonouto1@gmail.com",
-          to: req.body.email,
-          subject: "Password reset",
-          html: `<p>Click this <a href="http://localhost:8080/user-mail-update/${token}">link</a> to set a new password.</p>`,
-        };
-        transporter.sendMail(mailSetting, (err, info) => {
-          if (err) throw err;
-          console.log("mail sent");
-        });
-        res.json({ message: "reset email send successfully" });
-      })
-      .catch((err) => {
-        const error = new Error(err);
-        error.httpStatusCode = 500;
-        return next(error);
-      });
+    const token = buffer.toString('hex');
+      User.findOne({email}).then(user=>{
+      if(!user){
+        req.flash('err', 'No account with that email found');
+      }
+      user.resetToken = token;
+      user.resetTokenExpiration = Date.now() + 3600000;
+      return user.save();
+    }).then(result =>{
+        const msg = {
+        to: email,
+        from: 'kentinhogbonouto1@gmail.com',
+        subject: 'Reset password instructions',
+        html: `
+                <strong>
+                  Hello ${email}<br>
+                </strong>
+                <p>
+                  Someone has requested a link to change your password. 
+                  You can do this through the link below: http://127.0.0.1/auth/api/user-reset-pass/${token}
+                  or copy and open this link in your browser:
+                  <a href="http://127.0.0.1/auth/api/user-reset-pass/${token}">change password</a>
+                  If you didn't request this, please ignore this email.
+                  Your password won't change until you access the link above and create a new one.
+                </p>
+              `,
+      };
+      sgMail.send(msg);
+      console.log(result.statusCode);
+      console.log(result.headers);
+    })
+    .catch((error) => {
+      console.error(error);
+    });
   });
+res.json({"message":"reset email send succesfully"});
 };
 
 //New password
