# routes/routes.js
@@ -13,35 +13,48 @@ const User = require("../models/model");
 router.post(
   "/user-sign-up",
   [
+    body("firstName")
+    .isAlpha()
+    .withMessage('Your last name must contains the special character'),
+    
+    body("lastName")
+    .isAlpha()
+    .withMessage('Your last name must contains the special character'),
+    
     body("email")
       .isEmail()
       .withMessage("Please enter a valide email")
       .custom((value, { req }) => {
         return User.findOne({ email: value }).then((userDoc) => {
           if (userDoc) {
-            return Promise.reject(
-              "email already exist, choose another one please"
-            );
+            return Promise.reject("email already exist, choose another one please");
           }
         });
       })
       .normalizeEmail(),
 
-    body("password", "please enter a password with at least 5 character")
-      .isLength({ min: 5 })
+    body("password")
+      .isLength({min: 5})
+      .withMessage("please enter a password with at least 5 character")
       .isAlphanumeric()
+      .withMessage("Your password must contains the special charactere")
       .trim(),
-    body("firstName").isEmpty(),
-    body("lastName").isEmpty(),
+    
+    // body("confirmPassword").custom((value, {req}) => {
+    //   if(value !== req.body.password){
+    //     throw new Error("Password doesn't match");
+    //   }
+    //   return true;
+    // })
   ],
   middlController.postSignUp
 );
+
 router.post(
   "/user-sign-in",
   [body("email").isEmail(), body("password").isLength().isAlphanumeric()],
   middlController.postSignIn
 );
-router.get("/user-sign-in-get", middlController.verifyToken);
 router.post("/user-reset-pass", middlController.postReset);
 router.post("/user-mail-update", middlController.postNewPassword);
 router.post("/token", middlController.postToken);
